--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -32,11 +33,16 @@
             <tr>
               <td> <a href="/u/<%= id %>"><%= id %></a></td>
               <td><%= urls[id] %></td>
+              <td>
+                <form method="POST" action="/urls/<%= id %>/delete">
+                  <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+              </td>
             </tr>
           <% } %>
         </tbody>
       </table>
-      <a href="#">Shorten a new URL</a>
+      <a href="/urls/new">Shorten a new URL</a>
     </main>
     <!-- Bootstrap JS -->
     <script
