--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -19,6 +19,21 @@
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
+        <h6 style="font-size: 1.5rem;">Edit</h6>
+          <div class="d-flex justify-content-center">
+            <form class="form-inline" action="/urls/<%= id %>" method="POST">
+              <div class="form-group mb-2">
+                <label for="longURL">New URL:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="longURL"
+                  style="width: 300px; margin: 1em"
+                />
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
