--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,25 +10,28 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form class="form-inline" action="/login" method="POST">
-          <div class="form-group mb-2">
-            <input
-              class="form-control"
-              type="text"
-              name="login"
-              placeholder="username"
-              style="width: 300px; margin: 1em"
-            />
-            <button type="submit" class="btn btn-primary">Login</button>
-          </div>
-        </form>
-      </div>
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/urls">My URLs</a>
+      <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <input
+            class="form-control"
+            type="text"
+            name="login"
+            placeholder="username"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+      </form>
+      <% if (username) { %>
+      <span class="nav-item nav-link">Logged in as: <%= username %></span>
+      <% } %>
     </div>
+  </div>
   </nav>
-</header>
+  </header>
