--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,6 +16,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/urls">My URLs</a>
       <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+      <% if (!username) { %>
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <input
@@ -26,10 +27,14 @@
             style="width: 300px; margin: 1em"
           />
           <button type="submit" class="btn btn-primary">Login</button>
+          <% } %>
         </div>
       </form>
       <% if (username) { %>
       <span class="nav-item nav-link">Logged in as: <%= username %></span>
+      <form class="form-inline" action="/logout" method="POST">
+        <button type="submit" class="btn btn-primary">Logout</button>
+      </form>
       <% } %>
     </div>
   </div>
