--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,7 +16,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/urls">My URLs</a>
       <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      <% if (!username) { %>
+      <% if (!currentUser) { %>
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <input
@@ -30,8 +30,8 @@
           <% } %>
         </div>
       </form>
-      <% if (username) { %>
-      <span class="nav-item nav-link">Logged in as: <%= username %></span>
+      <% if (currentUser) { %>
+      <span class="nav-item nav-link">Logged in as: <%= currentUser.email %></span>
       <form class="form-inline" action="/logout" method="POST">
         <button type="submit" class="btn btn-primary">Logout</button>
       </form>
