--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,26 +16,8 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="/urls">My URLs</a>
       <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      <% if (!currentUser) { %>
-      <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2">
-          <input
-            class="form-control"
-            type="text"
-            name="login"
-            placeholder="username"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-primary">Login</button>
-          <% } %>
-        </div>
-      </form>
-      <% if (currentUser) { %>
-      <span class="nav-item nav-link">Logged in as: <%= currentUser.email %></span>
-      <form class="form-inline" action="/logout" method="POST">
-        <button type="submit" class="btn btn-primary">Logout</button>
-      </form>
-      <% } %>
+      <a class="nav-item nav-link" href="/register">Register</a>
+      <a class="nav-item nav-link" href="/login">Login</a>
     </div>
   </div>
   </nav>
