Refactor register.ejs template Add placeholder text for email and password form

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -20,6 +20,7 @@
     <div class="form-group mb-2">
       <label for="email">email:</label>
       <input
+        placeholder="Enter Email"
         class="form-control"
         type="email"
         name="email"
@@ -28,6 +29,7 @@
       <div class="form-group mb-2">
         <label for="password">password:</label>
         <input
+          placeholder="Password"
           class="form-control"
           type="password"
           name="password"
