--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,13 @@
       <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       <a class="nav-item nav-link" href="/register">Register</a>
       <a class="nav-item nav-link" href="/login">Login</a>
+        </form>
+        <% if (currentUser) { %>
+          <span class="nav-item nav-link">Logged in as: <%= currentUser.email %></span>
+        <form class="form-inline" action="/logout" method="POST">
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+        <% } %>
     </div>
   </div>
   </nav>
