--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <h1>Register</h1>
+  <h1>Create Account</h1>
   <form class="form-inline" action="/register" method="POST">
     <div class="form-group mb-2">
       <label for="email">email:</label>
