--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td> <a href="/u/<%= id %>"><%= id %></a></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td>
                 <form method="Get" action="/urls/<%= id %>">
                   <button type="submit" class="btn btn-primary">Edit</button>
